hphp/hack/test/typecheck/xhp/xhp_children_empty.php.exp
File "xhp_children_empty.php", line 4, characters 21-21:
An XHP name or category name is expected here. (Parsing[1002])
