hphp/hack/test/typecheck/xhp/xhp_children_empty.php
<?hh

class :my-html-one {
  children (pcdata, empty);
}
